WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
23158
Fix sharing of number / string constants in codeblocks.
https://bugs.webkit.org/show_bug.cgi?id=23158
Summary
Fix sharing of number / string constants in codeblocks.
Gavin Barraclough
Reported
2009-01-06 23:54:56 PST
This is broken by
https://bugs.webkit.org/show_bug.cgi?id=23114
.
Attachments
The patch
(2.92 KB, patch)
2009-01-07 00:05 PST
,
Gavin Barraclough
mjs
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Gavin Barraclough
Comment 1
2009-01-07 00:05:28 PST
Created
attachment 26486
[details]
The patch
Maciej Stachowiak
Comment 2
2009-01-07 00:10:23 PST
Comment on
attachment 26486
[details]
The patch r=me
Gavin Barraclough
Comment 3
2009-01-07 00:30:32 PST
Sending JavaScriptCore/ChangeLog Sending JavaScriptCore/bytecompiler/BytecodeGenerator.cpp Transmitting file data .. Committed revision 39675.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug